--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,9 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-      - workshop2.qmd
+      - href: workshop2.qmd
+        text: workshop2
+      
 
 format:
   html:
